# astro-natal-chart

./: .dockerignore  .env.prod.example  .gitignore  .pre-commit-config.yaml  BACKUP.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GETTING_STARTED.md  LICENSE  Makefile  PHASE5_IMPROVEMENTS.md  PRODUCTION_CHECKLIST.md  PROJECT_SPEC.md  README.md  docker-compose.observability.yml  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  test_blog_api.html  turbo.json
apps/api/: .dockerignore  .env.example  .env.production.example  Dockerfile  README.md  docker-entrypoint.sh  docker-entrypoint.sh.bak  pyproject.toml  requirements.txt  test_latex_compilation.py  test_pdf_compilation.py  test_security_headers.py
apps/api/alembic/: env.py
apps/api/alembic/versions/: 2025_11_14_1417-14f966eaec6d_initial_migration.py  2025_11_15_1335-22f518a0295f_add_chart_interpretations_table.py  2025_11_15_2216-2d5eb21ce250_add_password_reset_tokens_table.py  2025_11_15_2231-26cd00243413_add_user_consents_table.py  2025_11_16_0223-7b0e1bdd69f5_add_deleted_at_to_users_table.py  2025_11_16_1743-5d7ee6340019_add_user_profile_fields.py  2025_11_17_1535-b47c6865ccaf_add_async_processing_fields_to_.py  2025_11_20_1017-b6028633621c_add_pdf_fields_to_birth_charts.py  2025_11_20_1706-b0ef95f73d85_add_password_changed_at_field_to_users_.py  2025_11_20_1813-ccc076a63ea8_add_updated_at_triggers.py  2025_11_20_2358-17d797292022_add_pdf_generating_and_pdf_task_id_.py  2025_11_22_1040-44bae117595b_add_interpretation_cache_table.py  2025_11_22_1117-99dbbd3990dd_add_role_to_users_table.py  2025_11_22_1125-2f5d48c07f14_add_user_profile_expansion_fields.py  2025_11_22_1432-b6b3d319a3ad_merge_multiple_heads.py  2025_11_22_1556-93b7ace49920_merge_multiple_heads.py  2025_11_22_1600-add_rag_160000_vector_documents.py  2025_11_22_1600-add_rag_vector_documents_and_search_indices.py  2025_11_22_1820-49c63f382487_add_time_format_to_users.py  2025_11_22_1830-add_time_format_to_users.py  2025_11_23_0016-303700b12232_merge_rag_and_other_heads.py  2025_11_23_0053-5fb21e5a57d8_merge_migration_heads.py  2025_11_23_0104-a353cbccb342_add_public_charts_table.py  2025_11_23_1539-61837bbf83a1_add_rag_sources_to_chart_interpretations.py  2025_11_23_1953-782ba409672f_add_public_chart_interpretations_table.py  2025_11_24_2131-568668ec858b_add_language_to_chart_interpretations.py  2025_11_24_2135-9b5e1a052466_add_language_to_public_chart_.py  2025_11_24_2258-13342d0a1b93_rename_geral_to_free_add_premium_role.py  2025_11_25_1230-7a6c838f8b19_add_blog_posts_table.py  2025_11_25_1335-55361a122379_add_is_featured_to_blog_posts.py  2025_11_25_1936-6965ccdd2487_add_subscriptions_table.py  2025_11_29_1632-328917e74f78_add_unique_constraint_to_chart_.py  2025_11_30_1640-cec026704f64_add_i18n_columns_to_public_charts.py  2025_12_23_1700-a1b2c3d4e5f6_add_subscription_history_table.py  2025_12_29_1837-9d38e6334e7c_add_blog_i18n_support.py  2026_01_02_0951-9245212a9357_add_stripe_integration_tables.py  2026_01_02_1228-89f54823b8cd_add_credits_tables.py  2026_01_06_0200-fix_search_indices_constraint.py  2026_01_08_1314-dfcc6df55b0d_add_purchased_credits_to_user_credits.py
apps/api/app/: main.py  report_templates
apps/api/app/api/: deps.py
apps/api/app/astro/: __init__.py  alcochoden.py  dignities.py  hyleg.py  interpretation_prompts.yaml  longevity.py  lord_of_nativity_interpretations.py  lunar_phase.py  mentality.py  prenatal_syzygy.py  saturn_return.py  solar_phase.py  solar_return.py  temperament.py  terms.py
apps/api/app/core/: celery_app.py  config.py  context.py  cookie_helpers.py  credit_config.py  database.py  dependencies.py  email_theme.py  logging_config.py  middleware.py  rate_limit.py  security.py
apps/api/app/domain/: __init__.py  interpretation.py
apps/api/app/infrastructure/: __init__.py
apps/api/app/middleware/: __init__.py  security.py
apps/api/app/models/: __init__.py  blog_post.py  chart.py  credit_transaction.py  enums.py  interpretation.py  interpretation_cache.py  password_reset.py  payment.py  public_chart.py  public_chart_interpretation.py  search_index.py  subscription.py  subscription_history.py  user.py  user_consent.py  user_credit.py  vector_document.py  webhook_event.py
apps/api/app/report_templates/: macros.tex
apps/api/app/repositories/: __init__.py  audit_repository.py  base.py  blog_repository.py  chart_repository.py  credit_repository.py  credit_transaction_repository.py  interpretation_repository.py  payment_repository.py  public_chart_repository.py  public_interpretation_repository.py  subscription_history_repository.py  subscription_repository.py  user_repository.py  webhook_event_repository.py
apps/api/app/schemas/: __init__.py  admin.py  auth.py  blog.py  chart.py  credit.py  growth.py  interpretation.py  longevity.py  password.py  public_chart.py  saturn_return.py  solar_return.py  stripe.py  subscription.py  terms.py  timezone.py  user.py  user_activity.py  user_settings.py  user_stats.py
apps/api/app/services/: amplitude_service.py  astro_service.py  auth_service.py  backup_s3_service.py  blog_service.py  chart_service.py  credit_service.py  email.py  geocoding_service.py  (+15 more)
apps/api/media/: .gitignore
apps/api/report_templates/: frontpage.tex  macros.tex  natal_chart_report.tex
apps/api/scripts/: backfill_growth_interpretations.py  backfill_missing_language_interpretations.py  check_interpretation_counts.py  cleanup_duplicate_interpretations.py  generate_missing_interpretations.py  generate_public_chart_interpretations.py  migrate_chart_data.py  migrate_chart_data_to_language_keys.py  populate_public_charts.py  populate_public_growth.py  populate_public_interpretations.py  reboot.sh  recalculate_sect.py  regenerate_chart_data.py  regenerate_interpretations.py  seed_astros_e_mitos.py  seed_blog_posts.py  seed_public_charts.py  seed_rag_documents.py  seed_rag_from_s3.py  seed_rag_via_api.sh  test_oauth_email.py  upload_rag_docs_to_s3.py  validate_chart_data.py  validate_chart_data.sql
apps/api/tests/: conftest.py  test_placeholder.py  test_rate_limit.py
(+475 files in other folders)
